<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">

    <TextView 
        android:text="@string/usersinfo_registereduser_title"
        android:padding="3dip"/>
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/usersinfo_username"
            android:padding="3dip" />
        <TextView
            android:id="@+id/usersinfo_username_value"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/usersinfo_useremail"
            android:padding="3dip" />
        <TextView
            android:id="@+id/usersinfo_useremail_value"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
    <TextView
        android:text="@string/usersinfo_allusers"
        android:padding="3dip"/>
    <View
        android:layout_height="1dip"
        android:background="#FF909090" />
    <ListView
        android:id="@+id/usersinfo_alluserslist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
</TableLayout>