<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/register_info_lbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_info"/>
    <Button
        android:id="@+id/register_btn"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_info_lbl"
        android:layout_centerHorizontal="true"
        android:onClick="register"/>
    <TextView
        android:id="@+id/register_status_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_btn"
        android:text="@string/status"/>
    <TextView
        android:id="@+id/register_status_flag_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_btn"
        android:layout_toRightOf="@id/register_status_lbl"/>
    <ListView android:id="@android:id/list"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_below="@id/register_status_lbl"/>
</RelativeLayout>